--- a/nodejs/lesson01/sql-app/package.json
+++ b/nodejs/lesson01/sql-app/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.0",
     "@types/uuid": "^9.0.7",
+    "@types/winston": "^2.4.4",
     "i": "^0.3.7",
     "npm": "^10.2.3",
     "ts-node": "^10.9.1",
@@ -23,8 +25,12 @@
     "uuid": "^9.0.1"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
     "pg": "^8.11.3",
-    "typeorm": "^0.3.17"
+    "typeorm": "^0.3.17",
+    "winston": "^3.11.0"
   }
 }
