--- a/nodejs/lesson01/sql-app/package.json
+++ b/nodejs/lesson01/sql-app/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.9.0",
     "@types/uuid": "^9.0.7",
@@ -26,14 +27,16 @@
     "uuid": "^9.0.1"
   },
   "dependencies": {
-    "@types/jsonwebtoken": "^9.0.5",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.4",
+    "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "pg": "^8.11.3",
+    "redis": "4.6.10",
     "typeorm": "^0.3.17",
     "winston": "^3.11.0"
   }
