--- a/nodejs/lesson01/sql-app/package.json
+++ b/nodejs/lesson01/sql-app/package.json
@@ -6,25 +6,32 @@
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "serve": "node dist/index.js"
+    "serve": "node dist/index.js",
+    "test": "mocha -r ts-node/register --project tsconfig.test.json 'test/**/*.spec.ts'"
   },
   "keywords": [],
   "author": "UPB",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/chai": "^4.3.11",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/mocha": "^10.0.6",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.9.0",
+    "@types/node": "^20.9.4",
+    "@types/sinon": "^17.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.7",
     "@types/winston": "^2.4.4",
-    "i": "^0.3.7",
-    "npm": "^10.2.3",
+    "chai": "^4.3.10",
+    "mocha": "^10.2.0",
+    "sinon": "^17.0.1",
+    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.2.2",
-    "uuid": "^9.0.1"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "bcrypt": "5.1.1",
@@ -37,6 +44,8 @@
     "mysql": "^2.18.1",
     "pg": "^8.11.3",
     "redis": "4.6.10",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "typeorm": "^0.3.17",
     "winston": "^3.11.0"
   }
