--- a/myJava/auth/src/main/resources/application.properties
+++ b/myJava/auth/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:file:~/data.employee_db
 #spring.datasource.driver-class-name=org.h2.Driver
@@ -7,7 +8,7 @@
 spring.jpa.hibernate.ddl-auto=update
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+spring.datasource.url=jdbc:mysql://localhost:3306/users_db
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=amyroot
