--- a/myJava/auth/src/main/resources/application.properties
+++ b/myJava/auth/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/users_db
-spring.datasource.driver-class-name= com.mysql.jdbc.Driver
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=amyroot
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
